testsuite/tests/properties/invalid_generics/entity/test.lkt
from common import FooNode, Example

class ExampleSeq: FooNode {
    @parse_field items: ASTList[Example]

    @exported fun p(@ignored e: Entity[Int]): Bool = true
}
